--- a/golf/preprocessing/json_extract/extract.ipynb
+++ b/golf/preprocessing/json_extract/extract.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "impact 조건을 json에서 찾아서 그에 해당하는 jpg 파일들 분리하는 듯"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 전체 폴더 처리 코드(순회)"
    ]
   },
