--- a/golf/mmAction2_pre/csv_to_pkl.ipynb
+++ b/golf/mmAction2_pre/csv_to_pkl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "28cde1f2",
    "metadata": {},
    "outputs": [
@@ -10,179 +10,146 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Converting 20201116_General_001_DOS_A_M40_MM_026.csv → 20201116_General_001_DOS_A_M40_MM_026.pkl\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 121\u001b[39m\n\u001b[32m    119\u001b[39m pkl_path = pkl_dir / \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mframe_dir\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.pkl\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    120\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[INFO] Converting \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcsv_path.name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m → \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpkl_path.name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m121\u001b[39m \u001b[43mconvert_csv_to_pkl\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    122\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcsv_path\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcsv_path\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    123\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpkl_path\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpkl_path\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    124\u001b[39m \u001b[43m    \u001b[49m\u001b[43mframe_dir\u001b[49m\u001b[43m=\u001b[49m\u001b[43mframe_dir\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    125\u001b[39m \u001b[43m    \u001b[49m\u001b[43mimg_shape\u001b[49m\u001b[43m=\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m1080\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1920\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    126\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnormalize_method\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m0to1\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    127\u001b[39m \u001b[43m    \u001b[49m\u001b[43mconfidence_threshold\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    128\u001b[39m \u001b[43m    \u001b[49m\u001b[43minterpolate\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\n\u001b[32m    129\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 105\u001b[39m, in \u001b[36mconvert_csv_to_pkl\u001b[39m\u001b[34m(csv_path, pkl_path, frame_dir, label, img_shape, normalize_method, confidence_threshold, interpolate)\u001b[39m\n\u001b[32m    103\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(pkl_path, \u001b[33m'\u001b[39m\u001b[33mwb\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m    104\u001b[39m     pickle.dump(data, f)\n\u001b[32m--> \u001b[39m\u001b[32m105\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SUCCESS] \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mcsv_path\u001b[49m\u001b[43m.\u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m → \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpkl_path.name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mT\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m frames)\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    106\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
-      "\u001b[31mAttributeError\u001b[39m: 'str' object has no attribute 'name'"
+      "[DONE] Saved D:\\golfDataset\\스포츠 사람 동작 영상(골프)\\Training\\Public\\male\\train\\crop_pkl\\skeleton_dataset_90_10.pkl with 436 samples: 392 train, 44 val\n"
      ]
     }
    ],
    "source": [
     "#!/usr/bin/env python\n",
     "\"\"\"\n",
-    "OpenPose BODY25 CSV → NTU-RGB+D PKL 변환 스크립트\n",
-    "경로 설정 및 일괄 처리\n",
+    "OpenPose CSV → MMAction2 Skeleton PKL 변환 스크립트\n",
+    "하나의 PKL 파일에 전체 데이터와 90/10 split 정보(xsub_train/xsub_val)를 저장합니다.\n",
+    "balanced_true 폴더의 CSV는 label=1, false 폴더의 CSV는 label=0으로 설정합니다.\n",
     "\"\"\"\n",
     "from pathlib import Path\n",
-    "import os\n",
     "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import random\n",
     "\n",
-    "# BODY_25 → COCO(17) 매핑\n",
+    "# BODY_25 → COCO17 매핑\n",
     "MAPPING_BODY25_TO_COCO17 = [\n",
-    "    0, 16, 15, 18, 17, 5, 2, 6, 3, 7, 4, 12, 9, 13, 10, 14, 11\n",
+    "    0, 16, 15, 18, 17,\n",
+    "    5, 2, 6, 3, 7,\n",
+    "    4, 12, 9, 13, 10,\n",
+    "    14, 11\n",
     "]\n",
     "\n",
-    "def normalize_coordinates(keypoints, img_shape, method='0to1'):\n",
-    "    h, w = img_shape\n",
-    "    kp = keypoints.copy()\n",
-    "    if method == '0to1':\n",
-    "        kp[..., 0] /= w\n",
-    "        kp[..., 1] /= h\n",
-    "    elif method == 'center':\n",
-    "        kp[..., 0] = (kp[..., 0] - w/2) / (w/2)\n",
-    "        kp[..., 1] = (kp[..., 1] - h/2) / (h/2)\n",
-    "    elif method == 'skeleton_center':\n",
-    "        M, T, V, _ = kp.shape\n",
-    "        for m in range(M):\n",
-    "            for t in range(T):\n",
-    "                pts = kp[m, t, :, :2]\n",
-    "                mask = (pts != 0).all(axis=1)\n",
-    "                if mask.any():\n",
-    "                    valid = pts[mask]\n",
-    "                    cx, cy = valid.mean(axis=0)\n",
-    "                    bbox_w = valid[:,0].ptp()\n",
-    "                    bbox_h = valid[:,1].ptp()\n",
-    "                    scale = max(bbox_w, bbox_h)\n",
-    "                    if scale > 0:\n",
-    "                        kp[m, t, :, 0] = (kp[m, t, :, 0] - cx) / scale\n",
-    "                        kp[m, t, :, 1] = (kp[m, t, :, 1] - cy) / scale\n",
-    "    return kp\n",
     "\n",
-    "def filter_by_confidence(keypoints, scores, threshold=0.1):\n",
-    "    mask = scores < threshold\n",
-    "    keypoints[mask] = 0\n",
-    "    scores[mask] = 0\n",
-    "    return keypoints, scores\n",
-    "\n",
-    "def interpolate_missing_keypoints(keypoints, scores):\n",
-    "    kp = keypoints.copy()\n",
-    "    M, T, V, C = kp.shape\n",
-    "    for m in range(M):\n",
-    "        for v in range(V):\n",
-    "            for c in range(C):\n",
-    "                series = kp[m, :, v, c]\n",
-    "                valid = series != 0\n",
-    "                if valid.any() and not valid.all():\n",
-    "                    idx = np.where(valid)[0]\n",
-    "                    interp = np.interp(np.arange(T), idx, series[idx])\n",
-    "                    kp[m, ~valid, v, c] = interp[~valid]\n",
-    "    return kp\n",
-    "\n",
-    "def convert_csv_to_pkl(\n",
-    "    csv_path,\n",
-    "    pkl_path,\n",
-    "    frame_dir,\n",
-    "    label=0,\n",
-    "    img_shape=(1080, 1920),\n",
-    "    normalize_method='0to1',\n",
-    "    confidence_threshold=0.1,\n",
-    "    interpolate=False\n",
-    "):\n",
-    "    # Path 변환\n",
-    "    csv_path = Path(csv_path)\n",
-    "    pkl_path = Path(pkl_path)\n",
-    "\n",
-    "    # 1. Load CSV\n",
+    "def load_and_process(csv_path: Path,\n",
+    "                     img_shape=(1080, 1920),\n",
+    "                     confidence_threshold=0.1,\n",
+    "                     interpolate=True,  # 기본 보간 활성화,\n",
+    "                     normalize_method='0to1') -> dict:\n",
+    "    \"\"\"\n",
+    "    단일 CSV 파일을 읽어 annotation dict 반환\n",
+    "    \"\"\"\n",
     "    df = pd.read_csv(csv_path)\n",
     "    T = len(df)\n",
     "    V25 = 25\n",
     "\n",
-    "    # 2. Parse to arrays\n",
     "    kp25 = np.zeros((1, T, V25, 2), dtype=np.float32)\n",
     "    score25 = np.zeros((1, T, V25), dtype=np.float32)\n",
     "    for t, row in df.iterrows():\n",
-    "        for v in range(V25):\n",
-    "            x, y, s = row[3*v:3*v+3]\n",
-    "            kp25[0, t, v] = (x, y)\n",
-    "            score25[0, t, v] = s\n",
+    "        vals = row.values.reshape(-1, 3)\n",
+    "        # NaN/Inf 처리: 이상치 0으로 대체\n",
+    "        vals = np.nan_to_num(vals, nan=0.0, posinf=0.0, neginf=0.0)\n",
+    "        kp25[0, t] = vals[:, :2]\n",
+    "        score25[0, t] = vals[:, 2]\n",
     "\n",
-    "    # 3. Confidence filtering\n",
-    "    if confidence_threshold > 0:\n",
-    "        kp25, score25 = filter_by_confidence(kp25, score25, confidence_threshold)\n",
+    "    # confidence filter\n",
+    "    low = score25 < confidence_threshold\n",
+    "    kp25[low] = 0\n",
+    "    score25[low] = 0\n",
     "\n",
-    "    # 4. Interpolation\n",
-    "    if interpolate:\n",
-    "        kp25 = interpolate_missing_keypoints(kp25, score25)\n",
+    "    # interpolation\n",
+    "    h, w = img_shape\n",
+    "    if normalize_method == '0to1':\n",
+    "        kp25[..., 0] /= w\n",
+    "        kp25[..., 1] /= h\n",
+    "    elif normalize_method == 'center':\n",
+    "        kp25[..., 0] = (kp25[..., 0] - w/2) / (w/2)\n",
+    "        kp25[..., 1] = (kp25[..., 1] - h/2) / (h/2)\n",
+    "    elif normalize_method == 'skeleton_center':\n",
+    "        for t in range(T):\n",
+    "            pts = kp25[0, t]\n",
+    "            valid = np.all(pts != 0, axis=1)\n",
+    "            if valid.any():\n",
+    "                cxy = pts[valid].mean(axis=0)\n",
+    "                bbox = pts[valid]\n",
+    "                scale = max(bbox[:,0].ptp(), bbox[:,1].ptp())\n",
+    "                if scale > 0:\n",
+    "                    kp25[0, t] = (pts - cxy) / scale\n",
     "\n",
-    "    # 5. Normalization\n",
-    "    kp25 = normalize_coordinates(kp25, img_shape, normalize_method)\n",
-    "\n",
-    "    # 6. BODY25 → COCO17 conversion\n",
+    "    # COCO17 변환\n",
     "    kp17 = kp25[:, :, MAPPING_BODY25_TO_COCO17, :]\n",
     "    score17 = score25[:, :, MAPPING_BODY25_TO_COCO17]\n",
     "\n",
-    "    # 7. Package into NTU-style dict\n",
     "    sample = {\n",
-    "        'frame_dir': frame_dir,\n",
-    "        'label': label,\n",
+    "        'total_frames': T,\n",
     "        'img_shape': img_shape,\n",
     "        'original_shape': img_shape,\n",
-    "        'total_frames': T,\n",
     "        'keypoint': kp17,\n",
     "        'keypoint_score': score17\n",
     "    }\n",
-    "    data = {\n",
-    "        'split': {'xsub_val': [frame_dir]},\n",
-    "        'annotations': [sample]\n",
-    "    }\n",
+    "    return sample\n",
     "\n",
-    "    # 8. Write to PKL\n",
-    "    with open(pkl_path, 'wb') as f:\n",
-    "        pickle.dump(data, f)\n",
-    "\n",
-    "    print(f\"[SUCCESS] {csv_path.name} → {pkl_path.name} ({T} frames)\")\n",
-    "    return data\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    # ✏️ 경로 설정\n",
-    "    BASE_DIR = Path(r\"D:/golfDataset/스포츠 사람 동작 영상(골프)/Training/Public/male/train\")\n",
-    "    CATEGORIES = [\"balanced_true\", \"false\"]\n",
+    "    # 기본 경로 설정\n",
+    "    BASE = Path(r'D:/golfDataset/스포츠 사람 동작 영상(골프)/Training/Public/male/train')\n",
+    "    cats = ['balanced_true', 'false']\n",
     "\n",
-    "    for cat in CATEGORIES:\n",
-    "        csv_dir = BASE_DIR / cat / \"crop_keypoint\"\n",
-    "        pkl_dir = BASE_DIR / cat / \"crop_pkl\"\n",
-    "        pkl_dir.mkdir(parents=True, exist_ok=True)\n",
+    "    # 전체 CSV 파일 목록 수집\n",
+    "    all_csvs = []\n",
+    "    for cat in cats:\n",
+    "        all_csvs.extend((BASE / cat / 'crop_keypoint').glob('*.csv'))\n",
+    "    all_csvs = sorted(all_csvs)\n",
     "\n",
-    "        for csv_file in sorted(csv_dir.glob(\"*.csv\")):\n",
-    "            frame_dir = csv_file.stem\n",
-    "            pkl_file = pkl_dir / f\"{frame_dir}.pkl\"\n",
-    "            print(f\"[INFO] Converting {csv_file.name} → {pkl_file.name}\")\n",
-    "            convert_csv_to_pkl(\n",
-    "                csv_path=csv_file,\n",
-    "                pkl_path=pkl_file,\n",
-    "                frame_dir=frame_dir,\n",
-    "                img_shape=(1080, 1920),\n",
-    "                normalize_method='0to1',\n",
-    "                confidence_threshold=0.1,\n",
-    "                interpolate=False\n",
-    "            )\n"
+    "    # 90/10 split\n",
+    "    random.seed()   # 현재 시간 기반 시드 설정\n",
+    "    ids = [p.stem for p in all_csvs]\n",
+    "    random.shuffle(ids)\n",
+    "    split_idx = int(len(ids) * 0.9)\n",
+    "    train_set = set(ids[:split_idx])\n",
+    "    val_set = set(ids[split_idx:])\n",
+    "\n",
+    "    # annotations 및 split 사전 초기화\n",
+    "    annotations = []\n",
+    "    split_dict = {'xsub_train': [], 'xsub_val': []}\n",
+    "\n",
+    "    for csv_path in all_csvs:\n",
+    "        fid = csv_path.stem\n",
+    "        # annotation 생성\n",
+    "        info = load_and_process(csv_path, interpolate=True)\n",
+    "        # 폴더 이름으로 레이블 설정\n",
+    "        category = csv_path.parent.parent.name\n",
+    "        label = 1 if category == 'balanced_true' else 0\n",
+    "        info.update({'frame_dir': fid, 'label': label})\n",
+    "        annotations.append(info)\n",
+    "\n",
+    "        # split 기록\n",
+    "        if fid in train_set:\n",
+    "            split_dict['xsub_train'].append(fid)\n",
+    "        else:\n",
+    "            split_dict['xsub_val'].append(fid)\n",
+    "\n",
+    "    # 전체 데이터 패키징\n",
+    "    data = {'split': split_dict, 'annotations': annotations}\n",
+    "\n",
+    "    # PKL 저장\n",
+    "    out_pkl = BASE / 'crop_pkl' / 'skeleton_dataset_90_10.pkl'\n",
+    "    out_pkl.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    with open(out_pkl, 'wb') as f:\n",
+    "        pickle.dump(data, f, protocol=4)\n",
+    "    print(f\"[DONE] Saved {out_pkl} with {len(annotations)} samples: \"\n",
+    "          f\"{len(split_dict['xsub_train'])} train, {len(split_dict['xsub_val'])} val\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timesformer",
+   "display_name": "mmaction",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
