combine all preprocessing
모든 데이터 전처리 과정 통합해서 파일로 저장

--- a/golf/Timesformer_finetune/timesformer_finetune.ipynb
+++ b/golf/Timesformer_finetune/timesformer_finetune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "68c5a0fb",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
     "    return img\n",
     "\n",
     "# ----------------- 하이퍼파라미터 ----------------------------\n",
-    "ROOT          = Path(r\"D:\\golfDataset\\스포츠 사람 동작 영상(골프)\\Training\\Public\\male\\train\")\n",
+    "ROOT          = Path(r\"D:\\golfDataset\\dataset\\train\")\n",
     "PRETRAIN_PYTH = Path(r\"D:\\timesformer\\pretrained\\TimeSformer_divST_96x4_224_K600.pyth\")\n",
     "NUM_FRAMES    = 32\n",
     "CLIPS_PER_VID = 5\n",
@@ -326,6 +326,187 @@
     "plt.title(\"Training Loss Curve\")\n",
     "plt.xlabel(\"Epoch\"); plt.ylabel(\"Loss\")\n",
     "plt.grid(True); plt.legend(); plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ded9450e",
+   "metadata": {},
+   "source": [
+    "TEST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f0f283a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⏳ 모델 로드 중...\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'head.weight'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 71\u001b[39m\n\u001b[32m     69\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m⏳ 모델 로드 중...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     70\u001b[39m \u001b[38;5;66;03m# 모델 생성\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m71\u001b[39m model = \u001b[43mTimeSformer\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     72\u001b[39m \u001b[43m    \u001b[49m\u001b[43mimg_size\u001b[49m\u001b[43m=\u001b[49m\u001b[43mIMG_SIZE\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     73\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnum_frames\u001b[49m\u001b[43m=\u001b[49m\u001b[43mNUM_FRAMES\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     74\u001b[39m \u001b[43m    \u001b[49m\u001b[43mnum_classes\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     75\u001b[39m \u001b[43m    \u001b[49m\u001b[43mattention_type\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdivided_space_time\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     76\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpretrained_model\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mMODEL_PATH\u001b[49m\u001b[43m)\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# fine-tuned 모델 경로\u001b[39;49;00m\n\u001b[32m     77\u001b[39m \u001b[43m)\u001b[49m.to(DEVICE)\n\u001b[32m     79\u001b[39m \u001b[38;5;66;03m# finetuned weight만 로드\u001b[39;00m\n\u001b[32m     80\u001b[39m ckpt = torch.load(MODEL_PATH, map_location=DEVICE)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mD:\\timesformer\\timesformer\\models\\vit.py:348\u001b[39m, in \u001b[36mTimeSformer.__init__\u001b[39m\u001b[34m(self, img_size, patch_size, num_classes, num_frames, attention_type, pretrained_model, **kwargs)\u001b[39m\n\u001b[32m    346\u001b[39m \u001b[38;5;28mself\u001b[39m.num_patches = (img_size // patch_size) * (img_size // patch_size)\n\u001b[32m    347\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.pretrained:\n\u001b[32m--> \u001b[39m\u001b[32m348\u001b[39m     \u001b[43mload_pretrained\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_classes\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnum_classes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43min_chans\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43min_chans\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilter_fn\u001b[49m\u001b[43m=\u001b[49m\u001b[43m_conv_filter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg_size\u001b[49m\u001b[43m=\u001b[49m\u001b[43mimg_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_frames\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnum_frames\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_patches\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mnum_patches\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattention_type\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mattention_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpretrained_model\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpretrained_model\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mD:\\timesformer\\timesformer\\models\\helpers.py:161\u001b[39m, in \u001b[36mload_pretrained\u001b[39m\u001b[34m(model, cfg, num_classes, in_chans, filter_fn, img_size, num_frames, num_patches, attention_type, pretrained_model, strict)\u001b[39m\n\u001b[32m    159\u001b[39m     classifier_bias = state_dict[classifier_name + \u001b[33m'\u001b[39m\u001b[33m.bias\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m    160\u001b[39m     state_dict[classifier_name + \u001b[33m'\u001b[39m\u001b[33m.bias\u001b[39m\u001b[33m'\u001b[39m] = classifier_bias[\u001b[32m1\u001b[39m:]\n\u001b[32m--> \u001b[39m\u001b[32m161\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m num_classes != \u001b[43mstate_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mclassifier_name\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m.weight\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m.size(\u001b[32m0\u001b[39m):\n\u001b[32m    162\u001b[39m     \u001b[38;5;66;03m#print('Removing the last fully connected layer due to dimensions mismatch ('+str(num_classes)+ ' != '+str(state_dict[classifier_name + '.weight'].size(0))+').', flush=True)\u001b[39;00m\n\u001b[32m    163\u001b[39m     \u001b[38;5;66;03m# completely discard fully connected for all other differences between pretrained and created model\u001b[39;00m\n\u001b[32m    164\u001b[39m     \u001b[38;5;28;01mdel\u001b[39;00m state_dict[classifier_name + \u001b[33m'\u001b[39m\u001b[33m.weight\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m    165\u001b[39m     \u001b[38;5;28;01mdel\u001b[39;00m state_dict[classifier_name + \u001b[33m'\u001b[39m\u001b[33m.bias\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[31mKeyError\u001b[39m: 'head.weight'"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append(r\"D:\\timesformer\")  # TimeSformer 모듈 경로 추가\n",
+    "\n",
+    "import torch\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "from decord import VideoReader\n",
+    "import torchvision.transforms as T\n",
+    "from torchvision.transforms import functional as F, InterpolationMode\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from timesformer.models.vit import TimeSformer\n",
+    "\n",
+    "\n",
+    "# ----------------- 설정 ----------------------------\n",
+    "TEST_ROOT      = Path(r\"D:\\golfDataset\\dataset\\test\")\n",
+    "NUM_FRAMES     = 32\n",
+    "CLIPS_PER_VID  = 5\n",
+    "IMG_SIZE       = 224\n",
+    "DEVICE         = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "MODEL_PATH     = Path(\"timesformer_finetuned.pth\")  # fine-tuned 모델 파일 경로\n",
+    "BATCH_SIZE     = 1\n",
+    "NUM_WORKERS    = 0\n",
+    "\n",
+    "# ----------------- 헬퍼 함수 -------------------------\n",
+    "def uniform_sample(L, N):\n",
+    "    if L >= N:\n",
+    "        return np.linspace(0, L-1, N).astype(int)\n",
+    "    return np.pad(np.arange(L), (0, N-L), mode='edge')\n",
+    "\n",
+    "def preprocess_tensor(img_tensor):  # img_tensor: (3, H, W)\n",
+    "    img = F.resize(img_tensor, 256, interpolation=InterpolationMode.BICUBIC)\n",
+    "    img = F.center_crop(img, IMG_SIZE)\n",
+    "    img = F.normalize(img, [0.45]*3, [0.225]*3)\n",
+    "    return img\n",
+    "\n",
+    "def load_clip(path: Path):\n",
+    "    vr = VideoReader(str(path))\n",
+    "    L = len(vr)\n",
+    "    seg_edges = np.linspace(0, L, CLIPS_PER_VID + 1, dtype=int)\n",
+    "    clips = []\n",
+    "    for s0, s1 in zip(seg_edges[:-1], seg_edges[1:]):\n",
+    "        idx = uniform_sample(s1 - s0, NUM_FRAMES) + s0\n",
+    "        arr = vr.get_batch(idx).asnumpy().astype(np.uint8)        # (T, H, W, 3)\n",
+    "        clip = torch.from_numpy(arr).permute(0, 3, 1, 2).float() / 255.0\n",
+    "        clip = torch.stack([preprocess_tensor(f) for f in clip])   # (T, 3, H, W)\n",
+    "        clips.append(clip.permute(1, 0, 2, 3))                       # (3, T, H, W)\n",
+    "    return clips\n",
+    "\n",
+    "# ----------------- Dataset 정의 -----------------------\n",
+    "class SwingTestDataset(Dataset):\n",
+    "    def __init__(self, root: Path):\n",
+    "        self.samples = []\n",
+    "        for lbl, sub in enumerate((\"balanced_true\", \"false\")):\n",
+    "            folder = root / sub / \"crop_video\"\n",
+    "            if folder.exists():\n",
+    "                for p in folder.glob(\"*.mp4\"):\n",
+    "                    self.samples.append((p, lbl))\n",
+    "        print(f\"🔎 {len(self.samples)} test samples found in {root}\")\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.samples)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        path, lbl = self.samples[idx]\n",
+    "        clips = load_clip(path)\n",
+    "        return torch.stack(clips), torch.tensor(lbl)\n",
+    "\n",
+    "# ----------------- 모델 로드 --------------------------\n",
+    "print(\"⏳ 모델 로드 중...\")\n",
+    "# 모델 생성\n",
+    "model = TimeSformer(\n",
+    "    img_size=IMG_SIZE,\n",
+    "    num_frames=NUM_FRAMES,\n",
+    "    num_classes=2,\n",
+    "    attention_type='divided_space_time',\n",
+    "    pretrained_model=str(MODEL_PATH)  # fine-tuned 모델 경로\n",
+    ").to(DEVICE)\n",
+    "\n",
+    "# finetuned weight만 로드\n",
+    "ckpt = torch.load(MODEL_PATH, map_location=DEVICE)\n",
+    "model.load_state_dict(ckpt['model'])\n",
+    "model.eval()\n",
+    "print(\"✅ 모델 로드 완료\")\n",
+    "\n",
+    "# ----------------- 평가 ------------------------------\n",
+    "test_ds = SwingTestDataset(TEST_ROOT)\n",
+    "test_ld = DataLoader(test_ds, batch_size=BATCH_SIZE, shuffle=False,\n",
+    "                     num_workers=NUM_WORKERS, pin_memory=True)\n",
+    "\n",
+    "total = correct = 0\n",
+    "with torch.no_grad():\n",
+    "    for clips, labels in test_ld:\n",
+    "        vids = clips.squeeze(0).to(DEVICE)  # (5,3,T,H,W)\n",
+    "        labels = labels.to(DEVICE)\n",
+    "        probs = model(vids).softmax(1).mean(0, keepdim=True)\n",
+    "        pred = probs.argmax(1)\n",
+    "        total += 1\n",
+    "        correct += (pred == labels).sum().item()\n",
+    "\n",
+    "accuracy = correct / total if total > 0 else 0\n",
+    "print(f\"🎯 Test Accuracy: {accuracy * 100:.2f}% ({correct}/{total})\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bf941fdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔖 백업 저장: timesformer_finetuned.backup.pth\n",
+      "✅ timesformer_finetuned.pth 을(를) 순수 state_dict 형태로 업데이트했습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# 원본 체크포인트 경로\n",
+    "MODEL_PATH = Path(\"timesformer_finetuned.pth\")\n",
+    "\n",
+    "# 1) 로드\n",
+    "ckpt = torch.load(MODEL_PATH, map_location=\"cpu\")\n",
+    "\n",
+    "# 2) wrapper 안에 'model' 키가 있으면 꺼내고, 없으면 그대로 state_dict로 간주\n",
+    "if isinstance(ckpt, dict) and \"model\" in ckpt:\n",
+    "    state_dict = ckpt[\"model\"]\n",
+    "    # (선택) 원본 백업\n",
+    "    backup_path = MODEL_PATH.with_suffix(\".backup.pth\")\n",
+    "    if not backup_path.exists():\n",
+    "        print(f\"🔖 백업 저장: {backup_path}\")\n",
+    "        torch.save(ckpt, backup_path)\n",
+    "else:\n",
+    "    print(\"⚠️ 'model' 키가 없습니다. 이미 순수 state_dict일 수 있습니다.\")\n",
+    "    state_dict = ckpt\n",
+    "\n",
+    "# 3) 순수 state_dict만 덮어쓰기\n",
+    "torch.save(state_dict, MODEL_PATH)\n",
+    "print(f\"✅ {MODEL_PATH.name} 을(를) 순수 state_dict 형태로 업데이트했습니다.\")\n"
    ]
   }
  ],
