--- a/golf/mmAction2_finetune/my_stgcnpp_analysis.ipynb
+++ b/golf/mmAction2_finetune/my_stgcnpp_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c1ec3ec4",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Automatically selected the latest work directory: D:\\mmaction2\\work_dirs\\my_stgcnpp\\20250713_144119\n",
       "Parsing log file: D:\\mmaction2\\work_dirs\\my_stgcnpp\\20250713_144119\\20250713_144119.log\n"
      ]
     },
