--- a/golf/preprocessing/json_extract/action_classfication.ipynb
+++ b/golf/preprocessing/json_extract/action_classfication.ipynb
@@ -29,16 +29,16 @@
     "\n",
     "# 경로 설정\n",
     "base_path = r\"D:\\golfDataset\\스포츠 사람 동작 영상(골프)\\Training\\Public\\male\"\n",
-    "tf_base_path = os.path.join(base_path, \"tf\")\n",
+    "dataset_base_path = r\"D:\\golfDataset\\dataset\"   # 저장은 다른 접근이 쉬운 dataset 폴더에\n",
     "\n",
     "# 기준\n",
     "true_evaluations = {\"best\", \"good\", \"normal\"}\n",
     "false_evaluations = {\"bad\", \"worst\"}\n",
     "\n",
-    "# tf 디렉토리 구조 생성\n",
-    "for tf in [\"true\", \"false\"]:\n",
+    "# dataset 디렉토리 구조 생성\n",
+    "for dataset in [\"true\", \"false\"]:\n",
     "    for ext in [\"json\", \"jpg\"]:\n",
-    "        os.makedirs(os.path.join(tf_base_path, tf, ext), exist_ok=True)\n",
+    "        os.makedirs(os.path.join(dataset_base_path, dataset, ext), exist_ok=True)\n",
     "\n",
     "# JSON 탐색 (라벨 폴더에서만)\n",
     "for root, dirs, files in os.walk(base_path):\n",
@@ -75,11 +75,11 @@
     "            continue\n",
     "\n",
     "        # JSON 복사\n",
-    "        shutil.copy2(json_path, os.path.join(tf_base_path, tf_label, \"json\", file))\n",
+    "        shutil.copy2(json_path, os.path.join(dataset_base_path, tf_label, \"json\", file))\n",
     "\n",
     "        # JPG 복사 (존재 확인)\n",
     "        if os.path.exists(jpg_path):\n",
-    "            shutil.copy2(jpg_path, os.path.join(tf_base_path, tf_label, \"jpg\", jpg_filename))\n",
+    "            shutil.copy2(jpg_path, os.path.join(dataset_base_path, tf_label, \"jpg\", jpg_filename))\n",
     "        else:\n",
     "            print(f\"Missing JPG for {json_path} → expected {jpg_path}\")\n",
     "\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9b82124c",
    "metadata": {},
    "outputs": [
@@ -114,8 +114,7 @@
     "import shutil\n",
     "\n",
     "# 경로 설정\n",
-    "base_path = r\"D:\\golfDataset\\스포츠 사람 동작 영상(골프)\\Training\\Public\\male\"\n",
-    "test_base_path = os.path.join(base_path, \"test\")\n",
+    "test_base_path = os.path.join(dataset_base_path, \"test\")    # dataset 폴더에 test 폴더 생성\n",
     "\n",
     "# 기준\n",
     "true_evaluations = {\"best\", \"good\", \"normal\"}\n",
