mmaction2 위치 업데이트

--- a/golf/preprocessing/video_processing/csv_to_pkl.ipynb
+++ b/golf/preprocessing/video_processing/csv_to_pkl.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3b22fba2",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DONE] Saved D:\\golfDataset\\dataset\\test\\crop_pkl\\skeleton_dataset_full_val.pkl with 41 samples all in xsub_val\n"
+      "[DONE] Saved D:\\golfDataset\\dataset\\test\\crop_pkl\\skeleton_dataset_90_10.pkl with 41 samples in both splits\n"
      ]
     }
    ],
