--- a/golf/preprocessing/video_processing/csv_to_pkl.ipynb
+++ b/golf/preprocessing/video_processing/csv_to_pkl.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DONE] Saved D:\\golfDataset\\dataset\\test\\crop_pkl\\skeleton_dataset_90_10.pkl with 41 samples: 36 train, 5 val\n"
+      "[DONE] Saved D:\\golfDataset\\dataset\\train\\crop_pkl\\skeleton_dataset_90_10.pkl with 436 samples: 0 train, 436 val\n"
      ]
     }
    ],
@@ -34,6 +34,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import random\n",
+    "\n",
+    "RATIO_SPLIT = 0\n",
+    "# 0이면 valid 데이터만 존재, 1이면 train 데이터만 존재\n",
+    "# embedding 레이어 추출시 valid 만 사용\n",
     "\n",
     "# BODY_25 → COCO17 매핑\n",
     "MAPPING_BODY25_TO_COCO17 = [\n",
@@ -118,7 +122,7 @@
     "    random.seed()   # 현재 시간 기반 시드 설정\n",
     "    ids = [p.stem for p in all_csvs]\n",
     "    random.shuffle(ids)\n",
-    "    split_idx = int(len(ids) * 0.9)\n",
+    "    split_idx = int(len(ids) * RATIO_SPLIT)\n",
     "    train_set = set(ids[:split_idx])\n",
     "    val_set = set(ids[split_idx:])\n",
     "\n",
